--- a/SSISExecutionManagerReports/Execute ETL Package.rdl
+++ b/SSISExecutionManagerReports/Execute ETL Package.rdl
@@ -17,6 +17,9 @@
           <QueryParameter Name="@ETLBatchExecutionId">
             <Value>=Parameters!ETLBatchExecutionId.Value</Value>
           </QueryParameter>
+          <QueryParameter Name="@ETLPackageGroupId">
+            <Value>=Parameters!ETLPackageGroupId.Value</Value>
+          </QueryParameter>
           <QueryParameter Name="@SSISDBFolderName">
             <Value>=Parameters!SSISDBFolderName.Value</Value>
           </QueryParameter>
@@ -31,6 +34,7 @@
 
 EXEC	[sup].[ManuallyExecutePackageForETLBatch]
 		@ETLBatchExecutionId = @ETLBatchExecutionId,
+		@ETLPackageGroupId = @ETLPackageGroupId,
 		@SSISDBFolderName = @SSISDBFolderName , 
 		@SSISDBProjectName = @SSISDBProjectName , 
 		@SSISDBPackageName = @SSISDBPackageName , 
@@ -220,31 +224,40 @@ SELECT	@SSISExecutionId as N'@SSISExecutionId'</CommandText>
       <DataType>String</DataType>
       <Prompt>SSISDBPackage Name</Prompt>
     </ReportParameter>
+    <ReportParameter Name="ETLPackageGroupId">
+      <DataType>String</DataType>
+      <Prompt>ETLPackage Group Id</Prompt>
+    </ReportParameter>
   </ReportParameters>
   <ReportParametersLayout>
     <GridLayoutDefinition>
       <NumberOfColumns>2</NumberOfColumns>
-      <NumberOfRows>2</NumberOfRows>
+      <NumberOfRows>3</NumberOfRows>
       <CellDefinitions>
         <CellDefinition>
           <ColumnIndex>1</ColumnIndex>
           <RowIndex>0</RowIndex>
-          <ParameterName>SSISDBFolderName</ParameterName>
+          <ParameterName>SSISDBProjectName</ParameterName>
         </CellDefinition>
         <CellDefinition>
           <ColumnIndex>0</ColumnIndex>
           <RowIndex>0</RowIndex>
-          <ParameterName>SSISDBProjectName</ParameterName>
+          <ParameterName>SSISDBFolderName</ParameterName>
         </CellDefinition>
         <CellDefinition>
           <ColumnIndex>1</ColumnIndex>
+          <RowIndex>1</RowIndex>
+          <ParameterName>ETLBatchExecutionId</ParameterName>
+        </CellDefinition>
+        <CellDefinition>
+          <ColumnIndex>0</ColumnIndex>
           <RowIndex>1</RowIndex>
           <ParameterName>SSISDBPackageName</ParameterName>
         </CellDefinition>
         <CellDefinition>
           <ColumnIndex>0</ColumnIndex>
-          <RowIndex>1</RowIndex>
-          <ParameterName>ETLBatchExecutionId</ParameterName>
+          <RowIndex>2</RowIndex>
+          <ParameterName>ETLPackageGroupId</ParameterName>
         </CellDefinition>
       </CellDefinitions>
     </GridLayoutDefinition>
